all-in unit, bugfixes

--- a/templates/_partials/translations.html.twig
+++ b/templates/_partials/translations.html.twig
@@ -1,6 +1,7 @@
 <script type="text/javascript">
     var translations = {
         'no': '{% trans %}no{% endtrans %}',
+        'yes': '{% trans %}yes{% endtrans %}',
         'Net': '{% trans %}Net{% endtrans %}',
         'Gross': '{% trans %}Gross{% endtrans %}',
         'Budget': '{% trans %}Budget{% endtrans %}',
