--- a/templates/unit/index.html.twig
+++ b/templates/unit/index.html.twig
@@ -22,6 +22,7 @@
                         <tr>
                             <th>{% trans %}ID{% endtrans %}</th>
                             <th>{% trans %}Name{% endtrans %}</th>
+                            <th>{% trans %}All In{% endtrans %}</th>
                             <th>{% trans %}Actions{% endtrans %}</th>
                         </tr>
                         </thead>
@@ -31,6 +32,7 @@
                         <tr>
                             <th>{% trans %}ID{% endtrans %}</th>
                             <th>{% trans %}Name{% endtrans %}</th>
+                            <th>{% trans %}All In{% endtrans %}</th>
                             <th>{% trans %}Actions{% endtrans %}</th>
                         </tr>
                         </tfoot>
