--- a/templates/unit/form.html.twig
+++ b/templates/unit/form.html.twig
@@ -13,6 +13,7 @@
                 </div>
                 <div class="card-body">
                     {{ form_row(form.name) }}
+                    {{ form_row(form.allIn) }}
                     {{ form_row(form.submit) }}
                 </div>
             </div>
