--- a/templates/pdf/offer.de.html.twig
+++ b/templates/pdf/offer.de.html.twig
@@ -239,4 +239,40 @@ mpdf-->
         </tr>
         </tbody>
     </table>
+    <table>
+        <tr>
+            <td>&nbsp;</td>
+        </tr>
+        <tr>
+            <td colspan="2">
+                <p>
+                    Wir würden uns sehr über eine Auftragserteilung freuen. Für weitere Informationen stehen wir Ihnen gerne zur Verfügung.<br>
+                    <br>
+                    Bitte schicken Sie uns die unterschriebene Auftragserteilung gerne per E-Mail an {{ offer.company.email }}{% if offer.company.fax %} oder per Fax an {{ offer.company.fax }}{% endif %}.<br>
+                    <br>
+                    Vielen Dank für Ihr Vertrauen!
+                </p>
+            </td>
+        </tr>
+        <tr>
+            <td colspan="3">&nbsp;</td>
+        </tr>
+        <tr>
+            <td colspan="3">&nbsp;</td>
+        </tr>
+        <tr>
+            <td colspan="3">&nbsp;</td>
+        </tr>
+        <tr>
+            <td style="width: 60mm">
+                <hr>
+                <span class="sign-line text-smaller">Ort / Datum</span>
+            </td>
+            <td style="width: 65mm; padding-left: 5mm">
+                <hr>
+                <span class="sign-line text-smaller">Unterschrift, ggfs. Stempel</span>
+            </td>
+            <td></td>
+        </tr>
+    </table>
 </div>
