--- a/templates/pdf/offer.de.html.twig
+++ b/templates/pdf/offer.de.html.twig
@@ -244,6 +244,9 @@ mpdf-->
             <td>&nbsp;</td>
         </tr>
         <tr>
+            <td>&nbsp;</td>
+        </tr>
+        <tr>
             <td colspan="2">
                 <p>
                     Wir würden uns sehr über eine Auftragserteilung freuen. Für weitere Informationen stehen wir Ihnen gerne zur Verfügung.<br>
