change base font size

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -4,3 +4,5 @@
 
 @import "~admin-lte/build/scss/AdminLTE";
 @import "~admin-lte/plugins/datatables/dataTables.bootstrap4.css";
+
+@import "sass/base";
