make next numbers editable

--- a/templates/company/form.html.twig
+++ b/templates/company/form.html.twig
@@ -42,6 +42,9 @@
                     {{ form_row(form.bankIban) }}
                     {{ form_row(form.bankBic) }}
                     {{ form_row(form.logo) }}
+                    {{ form_row(form.nextCustomerNumber) }}
+                    {{ form_row(form.nextOfferNumber) }}
+                    {{ form_row(form.nextInvoiceNumber) }}
 
                     <div>
                         <label>{% trans %}Current Logo{% endtrans %}:</label>
