--- a/templates/project/archive.html.twig
+++ b/templates/project/archive.html.twig
@@ -1,6 +1,6 @@
 {% extends "base.html.twig" %}
 
-{% block pageTitle %}{% trans %}Manage Projects{% endtrans %}{% endblock %}
+{% block pageTitle %}{% trans %}Project Archive{% endtrans %}{% endblock %}
 
 {% block body %}
 <section class="content">
@@ -8,17 +8,10 @@
         <div class="col-12">
             <div class="card">
                 <div class="card-header">
-                    <h3 class="card-title">{% trans %}Manage Projects{% endtrans %}</h3>
+                    <h3 class="card-title">{% trans %}Project Archive{% endtrans %}</h3>
                 </div>
                 <div class="card-body">
-                    <div class="container-fluid mb-3">
-                        <div class="text-right">
-                            <a href="{{ path('app_project_add') }}" class="btn btn-primary">{% trans %}Add Project{% endtrans %}</a>
-                            <a href="{{ path('app_project_archive') }}" class="btn btn-primary">{% trans %}Project Archive{% endtrans %}</a>
-                        </div>
-                    </div>
-
-                    <table class="table table-sm table-bordered table-striped table-hover project--index--table-projects">
+                    <table class="table table-sm table-bordered table-striped table-hover project--archive--table-projects">
                         <thead>
                         <tr>
                             <th>{% trans %}ID{% endtrans %}</th>
