--- a/templates/time-tracking/index.html.twig
+++ b/templates/time-tracking/index.html.twig
@@ -26,7 +26,7 @@
                                         {{ day.day }}
                                     </div>
                                     <div class="timeline--day--duration">
-                                        {{ day.duration | number_format }}
+                                        {{ day.duration | number_format(1) }}
                                     </div>
                                 </div>
                                 {% endfor %}
