use invoice subject instead of static subject

--- a/templates/pdf/invoice.de.html.twig
+++ b/templates/pdf/invoice.de.html.twig
@@ -185,7 +185,7 @@ mpdf-->
                     <tr>
                         <td>
                             <h2>
-                                Rechnung {{ invoice.invoiceNumber }}
+                                {{ invoice.subject }}
                             </h2>
                         </td>
                         <td class="number">
