--- a/templates/pdf/offer.de.html.twig
+++ b/templates/pdf/offer.de.html.twig
@@ -261,6 +261,9 @@ mpdf-->
             <td colspan="3">&nbsp;</td>
         </tr>
         <tr>
+            <td colspan="3">&nbsp;</td>
+        </tr>
+        <tr>
             <td style="width: 60mm">
                 <hr>
                 <span class="sign-line text-smaller">Ort / Datum</span>
