add project number

--- a/templates/company/form.html.twig
+++ b/templates/company/form.html.twig
@@ -45,6 +45,7 @@
                     {{ form_row(form.nextCustomerNumber) }}
                     {{ form_row(form.nextOfferNumber) }}
                     {{ form_row(form.nextInvoiceNumber) }}
+                    {{ form_row(form.nextProjectNumber) }}
 
                     <div>
                         <label>{% trans %}Current Logo{% endtrans %}:</label>
