--- a/templates/project/archive.html.twig
+++ b/templates/project/archive.html.twig
@@ -14,7 +14,7 @@
                     <table class="table table-sm table-bordered table-striped table-hover project--archive--table-projects">
                         <thead>
                         <tr>
-                            <th>{% trans %}ID{% endtrans %}</th>
+                            <th>{% trans %}Project Number{% endtrans %}</th>
                             <th>{% trans %}Name{% endtrans %}</th>
                             <th>{% trans %}Customer / Company{% endtrans %}</th>
                             <th>{% trans %}Budget{% endtrans %}</th>
@@ -26,7 +26,7 @@
                         </tbody>
                         <tfoot>
                         <tr>
-                            <th>{% trans %}ID{% endtrans %}</th>
+                            <th>{% trans %}Project Number{% endtrans %}</th>
                             <th>{% trans %}Name{% endtrans %}</th>
                             <th>{% trans %}Customer / Company{% endtrans %}</th>
                             <th>{% trans %}Budget{% endtrans %}</th>
