--- a/templates/project/form.html.twig
+++ b/templates/project/form.html.twig
@@ -14,6 +14,7 @@
                 <div class="card-body">
                     {{ form_row(form.company) }}
                     {{ form_row(form.customer) }}
+                    {{ form_row(form.projectNumber) }}
                     {{ form_row(form.name) }}
                     {{ form_row(form.budget) }}
                     {{ form_row(form.pricePerHour) }}
