use offer subject

--- a/templates/pdf/offer.de.html.twig
+++ b/templates/pdf/offer.de.html.twig
@@ -176,7 +176,7 @@ mpdf-->
                     <tr>
                         <td>
                             <h2>
-                                Angebot {{ offer.offerNumber }}
+                                {{ offer.subject }}
                             </h2>
                         </td>
                         <td class="number">
