--- a/templates/pdf/offer.de.html.twig
+++ b/templates/pdf/offer.de.html.twig
@@ -139,7 +139,7 @@
                             </td>
                             <td width="25%">
                                 <p class="text-smaller text-muted">
-                                    {% if invoice.company.vatNumber %}USt-ID: {{ invoice.company.vatNumber }}<br />{% endif %}
+                                    {% if offer.company.vatNumber %}USt-ID: {{ offer.company.vatNumber }}<br />{% endif %}
                                     {% if offer.company.taxNumber %}Steuer-Nr.: {{ offer.company.taxNumber }}<br />{% endif %}
                                     {% if offer.company.districtCourt %}{{ offer.company.districtCourt }}, {% endif %}
                                     {% if offer.company.companyRegisterId %}{{ offer.company.companyRegisterId }}<br>{% endif %}
@@ -240,6 +240,18 @@ mpdf-->
         </tbody>
     </table>
     <table>
+        {% if offer.additionalText %}
+            <tr>
+                <td>&nbsp;</td>
+            </tr>
+            <tr>
+                <td colspan="3">
+                    <p>
+                        {{ offer.additionalText|nl2br }}
+                    </p>
+                </td>
+            </tr>
+        {% endif %}
         <tr>
             <td>&nbsp;</td>
         </tr>
