add page numbers

--- a/templates/pdf/offer.de.html.twig
+++ b/templates/pdf/offer.de.html.twig
@@ -105,6 +105,10 @@
                                         <td>Ihre Kundennummer</td>
                                         <td class="number">{{ offer.customer.customerNumber }}</td>
                                     </tr>
+                                    <tr>
+                                        <td>Seite</td>
+                                        <td class="number">{PAGENO} von {nbpg}</td>
+                                    </tr>
                                 </table>
                             </td>
                         </tr>
