--- a/templates/pdf/invoice.de.html.twig
+++ b/templates/pdf/invoice.de.html.twig
@@ -114,6 +114,10 @@
                                         <td>Ihre Kundennummer</td>
                                         <td class="number">{{ invoice.customer.customerNumber }}</td>
                                     </tr>
+                                    <tr>
+                                        <td>Seite</td>
+                                        <td class="number">{PAGENO} von {nbpg}</td>
+                                    </tr>
                                 </table>
                             </td>
                         </tr>
