show fax number in footer

--- a/templates/pdf/invoice.de.html.twig
+++ b/templates/pdf/invoice.de.html.twig
@@ -146,6 +146,7 @@
                             <td width="25%">
                                 <p class="text-smaller text-muted">
                                     Tel: {{ invoice.company.phone }}<br />
+                                    Fax: {{ invoice.company.fax }}<br />
                                     E-Mail: {{ invoice.company.email }}<br />
                                     {{ invoice.company.website }}
                                 </p>
