--- a/templates/pdf/offer.de.html.twig
+++ b/templates/pdf/offer.de.html.twig
@@ -137,6 +137,7 @@
                             <td width="25%">
                                 <p class="text-smaller text-muted">
                                     Tel: {{ offer.company.phone }}<br />
+                                    Fax: {{ offer.company.fax }}<br />
                                     E-Mail: {{ offer.company.email }}<br />
                                     {{ offer.company.website }}
                                 </p>
