--- a/templates/invoice/form.html.twig
+++ b/templates/invoice/form.html.twig
@@ -51,7 +51,8 @@
                         <tbody>
                         {% for item in form.items %}
                         <tr class="line-item">
-                            <td>{{ loop.index }}{{ form_row(item.position) }}</td>
+                            <td>{{ loop.index }}</td>
+                            <td>{{ form_row(item.position) }}</td>
                             <td>
                                 {{ form_row(item.title) }}
                                 {{ form_row(item.description) }}
@@ -73,8 +74,8 @@
                         {% endfor %}
                         <tr class="prototype line-item d-none">
                             <td class="line-item--index"></td>
+                            <td>{{ form_row(form.items.vars.prototype.position) }}</td>
                             <td>
-                                {{ form_row(form.items.vars.prototype.position) }}
                                 {{ form_row(form.items.vars.prototype.title) }}
                                 {{ form_row(form.items.vars.prototype.description) }}
                             </td>
