add missing company column

--- a/templates/document/index.html.twig
+++ b/templates/document/index.html.twig
@@ -21,6 +21,7 @@
                         <thead>
                         <tr>
                             <th>{% trans %}ID{% endtrans %}</th>
+                            <th>{% trans %}Company{% endtrans %}</th>
                             <th>{% trans %}Date{% endtrans %}</th>
                             <th>{% trans %}Title{% endtrans %}</th>
                             <th>{% trans %}Actions{% endtrans %}</th>
@@ -31,6 +32,7 @@
                         <tfoot>
                         <tr>
                             <th>{% trans %}ID{% endtrans %}</th>
+                            <th>{% trans %}Company{% endtrans %}</th>
                             <th>{% trans %}Date{% endtrans %}</th>
                             <th>{% trans %}Title{% endtrans %}</th>
                             <th>{% trans %}Actions{% endtrans %}</th>
