--- a/templates/pdf/invoice.de.html.twig
+++ b/templates/pdf/invoice.de.html.twig
@@ -220,7 +220,7 @@ mpdf-->
                 <td>
                     <b>{{ item.title }}</b>
                     {% if item.description %}
-                    <p>{{ item.description }}</p>
+                    <p>{{ item.description|nl2br }}</p>
                     {% endif %}
                 </td>
                 <td class="number">
