column name fixes

--- a/templates/pdf/time-tracking.html.twig
+++ b/templates/pdf/time-tracking.html.twig
@@ -99,8 +99,8 @@ mpdf-->
                 <th>Zeitpunkt</th>
                 <th>Person</th>
                 <th>Beschreibung</th>
-                <th class="number">Abrechenbar?</th>
-                <th class="number">Dauer / Std.</th>
+                <th class="number">Abrechnung</th>
+                <th class="number">Dauer</th>
             </tr>
         </thead>
         <tbody>
