add additional text for invoices

--- a/templates/invoice/form.html.twig
+++ b/templates/invoice/form.html.twig
@@ -34,6 +34,7 @@
             <div class="card">
                 <div class="card-body">
                     {{ form_row(form.subject) }}
+                    {{ form_row(form.text) }}
 
                     <table class="line-item-table table table-bordered table-striped table-hover">
                         <thead>
