--- a/templates/pdf/invoice.de.html.twig
+++ b/templates/pdf/invoice.de.html.twig
@@ -192,6 +192,9 @@ mpdf-->
                             <h2>
                                 {{ invoice.subject }}
                             </h2>
+                            <p>
+                                {{ invoice.text | nl2br }}
+                            </p>
                         </td>
                         <td class="number">
                         </td>
