--- a/templates/dashboard/index.html.twig
+++ b/templates/dashboard/index.html.twig
@@ -6,6 +6,17 @@
     <section class="content">
         <div class="row">
             <div class="col-12">
+                <div class="card">
+                    <div class="card-header">
+                        <h3 class="card-title">Dashboard</h3>
+                    </div>
+                    <div class="card-body">
+                        <p>Umsatz der letzten 12 Monate: {{ salesLastYear | number_format }} €</p>
+                        <p>Ausstehende Aufträge: {{ projectsActive }}</p>
+                        <p>Auftragsvolumen in EUR: {{ projectVolume | number_format }} €</p>
+                        <p>Auftragsreichweite: {{ projectRange }} Tage</p>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
