--- a/templates/project/form.html.twig
+++ b/templates/project/form.html.twig
@@ -18,6 +18,7 @@
                     {{ form_row(form.name) }}
                     {{ form_row(form.budget) }}
                     {{ form_row(form.pricePerHour) }}
+                    {{ form_row(form.budgetBilled) }}
                     {{ form_row(form.submit) }}
                 </div>
             </div>
