--- a/templates/dashboard/index.html.twig
+++ b/templates/dashboard/index.html.twig
@@ -11,7 +11,7 @@
                         <h3 class="card-title">Dashboard</h3>
                     </div>
                     <div class="card-body">
-                        <p>Umsatz der letzten 12 Monate: {{ salesLastYear | number_format }} €</p>
+                        <p>Umsatz (netto) der letzten 12 Monate: {{ salesLastYear | number_format }} €</p>
                         <p>Ausstehende Aufträge: {{ projectsActive }}</p>
                         <p>Auftragsvolumen in EUR: {{ projectVolume | number_format }} €</p>
                         <p>Auftragsreichweite: {{ projectRange }} Tage</p>
